--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,21 +1,21 @@
 name: 'Check updates and build'
 
 on:
-  workflow_dispatch:
+  workflow_dispatch: 
   schedule:
     - cron: '0 * * * *'
 
 permissions:
-  contents: write
+  contents:  write
   packages: write
 
 jobs:
   check:
     name: Check updates
     runs-on: ubuntu-latest
-    outputs:
+    outputs: 
       VERSION_UPDATED: ${{ steps.check.outputs.VERSION_UPDATED }}
-      VERSION: ${{ steps.check.outputs.VERSION }}
+      VERSION:  ${{ steps.check.outputs. VERSION }}
     steps:
       - uses: actions/checkout@v4
         name: Checkout files
@@ -23,7 +23,7 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
-      - id: check
+      - id:  check
         name: Run check script
         run: |
           chmod +x check.sh
@@ -31,24 +31,24 @@ jobs:
 
       - uses: actions-js/push@master
         name: Commit & Push changes
-        if: steps.check.outputs.VERSION_UPDATED == 1
+        if: steps.check. outputs.VERSION_UPDATED == 1
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          message: "ci: shadowbox updated `${{ steps.check.outputs.VERSION }}`"
+          github_token: ${{ secrets. GITHUB_TOKEN }}
+          message:  "ci: shadowbox updated `${{ steps.check.outputs.VERSION }}`"
 
   build:
     name: Build image
     runs-on: ubuntu-latest
     needs: check
     if: needs.check.outputs.VERSION_UPDATED == 1
-    steps:
+    steps: 
       - uses: actions/checkout@v4
-        name: Checkout files
+        name:  Checkout files
         
       - uses: actions/checkout@v4
         name: Checkout shadowbox files
         with:
-          repository: 'Jigsaw-Code/outline-server'
+          repository:  'Jigsaw-Code/outline-server'
           ref: "server-v${{ needs.check.outputs.VERSION }}"
           path: shadowbox
 
@@ -59,18 +59,18 @@ jobs:
         uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
-        uses: docker/login-action@v2
+        uses:  docker/login-action@v2
         with:
-          registry: ghcr.io
+          registry:  ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets. GITHUB_TOKEN }}
       
       - uses: actions/setup-node@v4
-        with:
+        with: 
           node-version: 'lts/hydrogen'
         
       - uses: actions/setup-go@v5
-        with:
+        with: 
           go-version: '^1.21'
           
       - name: Install go task
@@ -81,8 +81,10 @@ jobs:
         run: npm i
 
       - name: Run image build task
-        working-directory: shadowbox
-        run: task shadowbox:docker:build TARGET_ARCH=arm64 IMAGE_NAME=shadowbox VERSION=latest
+        working-directory:  shadowbox
+        env:
+          SB_VERSION:  ${{ needs.check.outputs. VERSION }}
+        run: task shadowbox:docker:build TARGET_ARCH=arm64 IMAGE_NAME=shadowbox VERSION=${{ needs.check.outputs.VERSION }}
 
       - name: Push built docker image
         run: |
@@ -90,4 +92,4 @@ jobs:
           docker tag shadowbox:latest ghcr.io/pmh-only/shadowbox:${{ needs.check.outputs.VERSION }}
 
           docker push ghcr.io/pmh-only/shadowbox:latest
-          docker push ghcr.io/pmh-only/shadowbox:${{ needs.check.outputs.VERSION }}
+          docker push ghcr. io/pmh-only/shadowbox:${{ needs.check. outputs.VERSION }}
