--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,6 +23,9 @@ jobs:
           persist-credentials: false
           fetch-depth: 0
 
+      - name: Install jq
+        run:  sudo apt-get update && sudo apt-get install -y jq
+
       - id:  check
         name: Run check script
         run: |
