--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -91,8 +91,8 @@ jobs:
 
       - name: Push built docker image
         run: |
-          docker tag shadowbox:latest ghcr.io/pmh-only/shadowbox:latest
-          docker tag shadowbox:latest ghcr.io/pmh-only/shadowbox:${{ needs.check.outputs.VERSION }}
+          docker tag shadowbox:latest ghcr.io/infinity6542/shadowbox:latest
+          docker tag shadowbox:latest ghcr.io/infinity6542/shadowbox:${{ needs.check.outputs.VERSION }}
 
-          docker push ghcr.io/pmh-only/shadowbox:latest
-          docker push ghcr. io/pmh-only/shadowbox:${{ needs.check. outputs.VERSION }}
+          docker push ghcr.io/infinity6542/shadowbox:latest
+          docker push ghcr. io/infinity6542/shadowbox:${{ needs.check. outputs.VERSION }}
