Update to be every week

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: 'Check updates and build'
 on:
   workflow_dispatch: 
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 0 * * 0'
 
 permissions:
   contents:  write
