--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   schedule:
     - cron: '0 0 * * 0'
 
-permissions:
+permissions: 
   contents:  write
   packages: write
 
@@ -13,31 +13,31 @@ jobs:
   check:
     name: Check updates
     runs-on: ubuntu-latest
-    outputs: 
-      VERSION_UPDATED: ${{ steps.check.outputs.VERSION_UPDATED }}
-      VERSION:  ${{ steps.check.outputs. VERSION }}
+    outputs:  
+      VERSION_UPDATED:  ${{ steps.check.outputs.VERSION_UPDATED }}
+      VERSION: ${{ steps.check.outputs.VERSION }}
     steps:
       - uses: actions/checkout@v4
         name: Checkout files
         with:
-          persist-credentials: false
-          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth:  0
 
       - name: Install jq
         run:  sudo apt-get update && sudo apt-get install -y jq
 
-      - id:  check
+      - id: check
         name: Run check script
-        run: |
-          chmod +x check.sh
+        run:  |
+          chmod +x check. sh
           ./check.sh
 
       - uses: actions-js/push@master
-        name: Commit & Push changes
-        if: steps.check. outputs.VERSION_UPDATED == 1
+        name:  Commit & Push changes
+        if:  steps.check.outputs.VERSION_UPDATED == 1
         with:
-          github_token: ${{ secrets. GITHUB_TOKEN }}
-          message:  "ci: shadowbox updated `${{ steps.check.outputs.VERSION }}`"
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          message: "ci: shadowbox updated `${{ steps.check.outputs.VERSION }}`"
 
   build:
     name: Build image
@@ -46,7 +46,7 @@ jobs:
     if: needs.check.outputs.VERSION_UPDATED == 1
     steps: 
       - uses: actions/checkout@v4
-        name:  Checkout files
+        name: Checkout files
         
       - uses: actions/checkout@v4
         name:  Checkout shadowbox files
@@ -55,7 +55,7 @@ jobs:
           ref: "server-v${{ needs.check.outputs.VERSION }}"
           path: shadowbox
 
-      - name: Set up QEMU
+      - name:  Set up QEMU
         uses: docker/setup-qemu-action@v3
 
       - name: Set up Docker Buildx
@@ -64,9 +64,9 @@ jobs:
       - name:  Log in to the Container registry
         uses: docker/login-action@v2
         with:
-          registry:  ghcr.io
+          registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ secrets. GITHUB_TOKEN }}
+          password: ${{ secrets.GITHUB_TOKEN }}
     
       - uses: actions/setup-node@v4
         with:
@@ -76,30 +76,32 @@ jobs:
         with:
           go-version: '^1.21'
         
-      - name:  Install go task
+      - name: Install go task
         run: sudo npm i -g @go-task/cli
 
       - name: Install dependencies
         working-directory: shadowbox
         run: npm i
 
-      - name: Run image build task
+      - name:  Run image build task
         working-directory: shadowbox
+        env:
+          SB_VERSION:  ${{ needs.check.outputs.VERSION }}
         run: task shadowbox:docker:build TARGET_ARCH=arm64 IMAGE_NAME=shadowbox VERSION=${{ needs.check.outputs.VERSION }}
 
-      - name:  Verify version in image
+      - name: Verify version in image
         run: |
           echo "Expected version: ${{ needs.check.outputs.VERSION }}"
-          docker run --rm shadowbox:latest node -e "console.log(require('/opt/outline-server/app/main.js'))" || echo "Could not verify"
+          docker run --rm shadowbox: latest node -e "console.log(require('/opt/outline-server/app/main.js'))" || echo "Could not verify"
 
       - name: Push built docker image
         env:
-          VERSION: ${{ needs.check.outputs.VERSION }}
+          VERSION:  ${{ needs.check.outputs.VERSION }}
         run: |
           echo "Pushing version: $VERSION"
-        
-          docker tag shadowbox:latest ghcr.io/pmh-only/shadowbox:latest
-          docker tag shadowbox:latest ghcr.io/pmh-only/shadowbox:$VERSION
-        
-          docker push ghcr.io/pmh-only/shadowbox:latest
-          docker push ghcr.io/pmh-only/shadowbox:$VERSION
+          
+          docker tag shadowbox:latest ghcr.io/infinity6542/shadowbox:latest
+          docker tag shadowbox:latest ghcr.io/infinity6542/shadowbox:$VERSION
+          
+          docker push ghcr.io/infinity6542/shadowbox:latest
+          docker push ghcr.io/infinity6542/shadowbox:$VERSION
