--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -83,6 +83,15 @@ jobs:
         working-directory: shadowbox
         run: npm i
 
+      - name: Verify VERSION is set
+        run: |
+          VERSION="${{ needs.check.outputs.VERSION }}"
+          echo "VERSION='$VERSION'"
+          if [ -z "$VERSION" ] || [ "$VERSION" == "null" ]; then
+            echo "ERROR: VERSION is not set correctly!"
+            exit 1
+          fi
+
       - name:  Run image build task
         working-directory: shadowbox
         env:
